--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -18,6 +17,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 80%;
+  flex-wrap: wrap;
 }
 .left-column,
 .right-column {
@@ -30,10 +30,10 @@ body {
   border-radius: 8px;
 }
 .left-column {
-  margin-left: 50px;
+  margin: 0;
 }
 .right-column {
-  margin-right: 20px;
+  margin: 0;
 }
 .left-column h2 {
   font-family: Inter;
@@ -48,6 +48,7 @@ body {
   font-weight: 400;
   margin-left: 80px;
   color: #000000;
+  text-align: left;
 }
 .button-control {
   display: flex;
@@ -78,8 +79,8 @@ body {
   flex-direction: column;
 }
 .tabs {
-  display: flex;
   margin-bottom: 10px;
+  flex-direction: row;
 }
 .tab {
   background: none;
@@ -111,4 +112,22 @@ body {
 }
 .reviews .review-item {
   margin-bottom: 15px;
+}
+
+@media (max-width: 768px) {
+  .left-column,
+  .right-column {
+    width: 100%;
+    order: unset; /* Ensure natural order */
+  }
+
+  .tabs {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .tab {
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
 }
