--- a/src/components/ProductDetails.css
+++ b/src/components/ProductDetails.css
@@ -3,12 +3,16 @@
   font-size: 24px;
   font-weight: 600;
   color: #000000;
+  margin-right: 400px;
+  text-align: left;
 }
 .description p {
   font-family: Inter;
   font-size: 12px;
   font-weight: 400;
   color: #000000;
+  margin-right: 200px;
+  text-align: left;
 }
 .description ul {
   font-family: Inter;
