--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -2,9 +2,17 @@
   font-family: Inter;
   font-size: 24px;
   font-weight: 600;
+  margin-right: 100px;
+  text-align: left;
 }
 .para {
   font-family: Montserrat;
   font-size: 12px;
   font-weight: 400;
+  margin-right: 100px;
+  text-align: left;
+}
+.star {
+  margin-right: 100px;
+  text-align: left;
 }
