--- a/src/components/SuccessfulPay.css
+++ b/src/components/SuccessfulPay.css
@@ -1,3 +1,17 @@
 .successful-page {
   text-align: center;
 }
+h3 {
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  color: #000000;
+}
+p {
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 400;
+  text-align: center;
+  color: #000000;
+}
